--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <div class="main-container">
         <div class="mb-10 text-center">
-            <img src="https://placehold.co/300x100/A7C7E7/FFFFFF?text=Rispri+Labs+Logo" alt="Rispri Labs Logo Placeholder" class="mx-auto mb-4 rounded-lg shadow-md">
+            <img src="Logo.png" alt="Rispri Labs Logo Placeholder" class="mx-auto mb-4 rounded-lg shadow-md">
             <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-blue-800 mb-4 leading-tight">
                 Rispri Labs: Comprehensive Services & Programs
             </h1>
