--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-blue-800 mb-4 leading-tight">
                 Rispri Labs: Comprehensive Services & Programs
             </h1>
-            <p class="text-xl text-gray-600">Innovating for a Healthier Tomorrow</p>
+            <p class="text-xl text-gray-600">Let Rispri Labs be your partner in building a sustainable tomorrow.</p>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
